--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ VITE_API2_URL_IMAGE=https://www.arudeal.com/
 VITE_API_CARS_LIST=https://api.arudeal.com/v1
 
 # VITE_API2_URL_IMAGE=http://77.237.237.132:4080
-VITE_LISTING_API_URL=https://realestate.arudeal.com
+VITE_LISTING_API_URL=http://77.237.237.132:5050
