--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,13 +6,8 @@ services:
     build:
       context: .
       dockerfile: dockerfile
-      args:
-        - NODE_ENV=production
-        - VITE_API_BASE_URL=${VITE_API_BASE_URL}
     env_file:
-      - .env
-    ports:
-      - "4060:4060"
+      - .env.production
     networks:
       - nginx-proxy-net
 
